src/containers/Storage/TableGroup/TableGroup.scss
.ydb-table-group {
    display: flex;
    flex-direction: column;

    width: 100%;
    margin-bottom: 20px;

    border: 1px solid var(--g-color-line-generic);
    border-radius: var(--g-spacing-2);

    &__button {
        padding: 8px 0;

        cursor: pointer;

        border: unset;
        background: unset;
    }

    &__title-wrapper {
        position: sticky;
        left: 0;

        display: flex;
        flex-direction: row;
        justify-content: flex-start;
        align-items: center;
        gap: var(--g-spacing-2);

        width: max-content;
        padding-left: 20px;
    }

    &__title {
        display: flex;
        flex-direction: row;
        gap: var(--g-spacing-4);
    }

    &__count {
        display: flex;
        flex-direction: row;
        gap: var(--g-spacing-3);
    }

    &__content {
        padding: 12px 0 20px 20px;
    }
}

